<resources>
    <string name="app_name">Gank.IO</string>

    <string name="nav_home">Home</string>
    <string name="nav_fav">Favorite</string>
    <string name="nav_gt">IM</string>
    <string name="nav_fk">FeedBack</string>
    <string name="nav_setting">Setting</string>

    <string-array name="slide_menu">
        <item>Home</item>
        <item>Favorite</item>
        <item>IM</item>
        <item>FeedBack</item>
        <item>Setting</item>
    </string-array>

    <string name="search">Search</string>
    <string name="category_android">Android</string>
    <string name="category_ios">iOS</string>
    <string name="category_web">Front-End Web</string>
    <string name="category_expand">Expand Resources</string>
    <string name="category_video">Video</string>
    <string name="categroy_meizi">MeiZi</string>

    <string name="navigation_header_title">Click Avatar to Login</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_content_listitem_normal">%1$s\nPost By:%2$s\nAt:%3$s</string>
    <string name="title_content_listitem_bigimage">Post By:%1$s\nAt:%2$s</string>
    <string name="title_activity_imageview">Image Details</string>
    <string name="share_dialog_title">Share</string>
    <string name="listitem_share_more">More</string>
    <string name="share_success">Share Success</string>
    <string name="share_failed">Share Failed, Please try again</string>
    <string name="share_cancel">Share Cancel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">UserName</string>
    <string name="password">PassWord</string>
    <string name="login">Login</string>
    <string name="login_with_third_account">Login with third account</string>
    <string name="register">Register</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="register_edt_null">UserName/PassWord/Confirm Password can not be empty</string>
    <string name="please_try_again">\nPlease try again</string>
    <string name="register_success">Register Success</string>
    <string name="password_not_equal">Password not equal</string>
    <string name="login_failed">Login failed\n</string>
    <string name="login_input_null">Please input username and password</string>
    <string name="login_wechat_not_support">Not support wechat for now</string>
    <string name="login_cancel">Login cancel</string>
    <string name="update_userinfo_failed">Update user info failed, Please try latter</string>
    <string name="doublic_click_exit_app">Click again to exit App</string>
    <string name="title_activity_me">Me</string>
    <string name="logining">Login...</string>
    <string name="saving_user_info">Saving user info...</string>
    <string name="menu_save_user_info">Save user info</string>
    <string name="image_already_saved">Image already saved to\n</string>
    <string name="image_success_saved">Image successfully saved to\n</string>
    <string name="menu_share_image">Share Image</string>
    <string name="menu_save_image">Save Image</string>
    <string name="avatar_from_camera">Take avatar use camera</string>
    <string name="avatar_from_image">Select avatar from images</string>
    <string name="set_user_avatar">Set avatar</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="set_user_nickname">Set nickname</string>
    <string name="set_user_homepage">Set homepage</string>
    <string name="set_user_signature">Set signature</string>
    <string name="nickname">Nickname</string>
    <string name="homepage">HomePage</string>
    <string name="Signature">Signature</string>
    <string name="regitsering">Register...</string>
    <string name="favorite_login_first">You must Login before favorite</string>
    <string name="watch_after_login">You must Login before access</string>
    <string name="mobile_phone">Mobile</string>
    <string name="email">E-mail</string>
    <string name="input_conversion_info_title">Please leave your contact info</string>
    <string name="title_activity_settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="exit_tishi">Are you sure to exit?</string>
    <string name="already_lagout">No user login</string>
    <string name="fb_new_reply">You have a new reply for your feedback, click to see details</string>
    <string name="fb_new_reply_title">You have a new reply</string>

</resources>
