<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_margin_2x">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin_2x">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_input_username"
            android:layout_marginBottom="@dimen/content_margin_2x">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_input_password"
            android:layout_marginLeft="@dimen/content_margin_2x"
            android:layout_marginRight="@dimen/content_margin_2x"
            android:text="@string/login"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/content_margin_2x"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin_2x"
                android:text="@string/register" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin"
                android:gravity="center"
                android:text="@string/login_with_third_account" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/login_btn_wechat"
                    style="@style/MyCustomLoginButtonTheme"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ssdk_oks_skyblue_logo_wechat_checked" />

                <ImageButton
                    android:id="@+id/login_btn_qq"
                    style="@style/MyCustomLoginButtonTheme"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ssdk_oks_skyblue_logo_qq_checked" />

                <ImageButton
                    android:id="@+id/login_btn_sinaweibo"
                    style="@style/MyCustomLoginButtonTheme"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ssdk_oks_skyblue_logo_sinaweibo_checked" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>

